# railway

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
cmake/: build_options.cmake  compile_options.cmake
doc/: TODO
source/: CMakeLists.txt
source/railway/: function.cpp  function.hpp
source/railway/core/: core.hpp  platform.hpp
source/railway/execution/: execute.hpp  executor.hpp  job.hpp
source/railway/execution/strand/: strand.cpp  strand.hpp
source/railway/fault/: atomic.hpp  atomic.ipp
source/railway/fault/injection/: inject.cpp  inject.hpp  yield_injector.cpp  yield_injector.hpp
source/railway/infra/: algorithm.cpp  algorithm.hpp  mpsc_queue.cpp  mpsc_queue.hpp  node.cpp  node.hpp
source/railway/platform/: platform.cpp  platform.hpp
source/railway/transport/linux/: address.cpp  address.hpp  completion.hpp  handle.cpp  handle.hpp  port.cpp  port.hpp  reactor.cpp  reactor.hpp  reactor_entry.cpp  reactor_entry.hpp  socket.cpp  socket.hpp  transport.cpp  transport.hpp
source/railway/transport/linux/detail/: completion.hpp  handle.cpp  handle.hpp  reactor.cpp  reactor.hpp  reactor_state.cpp  reactor_state.hpp
source/railway/transport/mac/: async_acceptor.cpp  async_acceptor.hpp  async_reader.cpp  async_reader.hpp  async_writer.cpp  async_writer.hpp  completion.hpp  handle.cpp  handle.hpp  reactor.cpp  reactor.hpp  socket.cpp  socket.hpp  state.cpp  state.hpp  state_reference.cpp  state_reference.hpp  state_source.hpp
test/: CMakeLists.txt  main.cpp
